# cube-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/cube_model/: action.py  move.py  reachable.py  rotate.py
src/rubik_cube_model/: __init__.py  model.py  move.py  navigation.py  new_cube.py  reachable.py  rotate.py  utils.py
src/rubik_model/: __init__.py  action.py
tests/: cube_integrity.py  test_action.py  test_model.py  test_move.py  test_new_cube.py  test_rotate.py  test_simple_actions.py
